--- a/index.html
+++ b/index.html
@@ -1062,6 +1062,10 @@
   "denys-lifetime": {
     "ttlMs": 0,
     "oneTime": false
+  },
+  "vova-test": {
+    "ttlMs": 0,
+    "oneTime": true
   }
 };
 
@@ -1716,7 +1720,7 @@ function applyTranslations() {
 }
 
 /* ================= CONFIG ================= */
-const API_KEY = "AIzaSyBhzx04RA5ozvs-MpC6Q3_TvQGAtZyDCaM";
+const API_KEY = "AIzaSyCVj_6OBhAhqaJMVcZ6fWELEUuPOEG8iuQ";
 const MODEL   = "gemini-2.5-pro";
 const RETRIES = 5;
 const BASE_DELAY = 800;
