--- a/index.html
+++ b/index.html
@@ -115,23 +115,21 @@
                 <span id="thumbs-state" class="state data-on data-off" aria-hidden="true"></span>
               </label>
             </div>
-            <div class="controls">
-              <div class="count-slider-container">
-                <div class="count-display">
-                  <div class="count-current-value" id="countValue">8</div>
-                  <div class="count-label" data-i18n="countLabel">Count (6–16)</div>
-                </div>
-                <div class="count-slider-track">
-                  <div class="count-slider-thumb" id="count-thumb"></div>
-                </div>
-                <div class="count-labels">
-                  <span class="count-label-item" data-value="6">6</span>
-                  <span class="count-label-item" data-value="8">8</span>
-                  <span class="count-label-item" data-value="10">10</span>
-                  <span class="count-label-item" data-value="12">12</span>
-                  <span class="count-label-item" data-value="14">14</span>
-                  <span class="count-label-item" data-value="16">16</span>
-                </div>
+            <div class="count-slider-container">
+              <div class="count-display">
+                <div class="count-current-value" id="count-value">8</div>
+                <div class="count-label" data-i18n="countLabel">Count (6–16)</div>
+              </div>
+              <div class="count-slider-track" id="count-track">
+                <div class="count-slider-thumb" id="count-thumb"></div>
+              </div>
+              <div class="count-labels">
+                <span class="count-label-item" data-value="6">6</span>
+                <span class="count-label-item" data-value="8">8</span>
+                <span class="count-label-item" data-value="10">10</span>
+                <span class="count-label-item" data-value="12">12</span>
+                <span class="count-label-item" data-value="14">14</span>
+                <span class="count-label-item" data-value="16">16</span>
               </div>
             </div>
           </div>
