--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   
+  <!-- Telegram Mini App SDK -->
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  
   <!-- External CSS -->
   <link rel="stylesheet" href="styles.css">
 </head>
